--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,18 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 
 a {
   color: #00B7FF;
+}
+
+table, th, td {
+  border: 2px solid black;
+  boder-collapse: collapse;
+}
+
+th, td {
+  padding: 15px;
 }
