--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,47 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h1>{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
+
+<h1>Calendar</h1>
+
+<h2>April</h2>
+<table style="width:100%;">
+  <tr>
+      <th>Sunday</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+    <td>4</td>
+    <td>5</td>
+    <td>6</td>
+    <td>7</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>9</td>
+    <td>10</td>
+    <td>11</td>
+    <td>12</td>
+    <td>13<br> Josh Off</td>
+    <td>14<br> Jon Off</td>
+  </tr>
+  <tr>
+    <td>15<br> Jon Off</td></td>
+    <td>16</td>
+    <td>17</td>
+    <td>18</td>
+    <td>19</td>
+    <td>20</td>
+    <td>21</td>
+  </tr>
+</table>
+
+<h1>Jon Wilhite</h1><svg width='400' height='110'><rect width='300' height='100' style='fill:blue;stroke-width:3;stroke:rgb(0,0,0)' /></svg>
+<h1>Josh Leong</h1><svg width='400' height='110'><rect width='300' height='100' style='fill:red;stroke-width:3;stroke:rgb(0,0,0)' /></svg>
