--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,14 +34,15 @@
   </tr>
   <tr>
     <td>15<br> Jon Off</td></td>
-    <td>16</td>
-    <td>17</td>
-    <td>18</td>
-    <td>19</td>
-    <td>20</td>
+    <td>16<br> Josh Off</td></td>
+    <td>17<br> Josh Off</td></td>
+    <td>18<br> Josh Off</td></td>
+    <td>19<br> Josh Off</td></td>
+    <td>20<br> Josh Off</td></td>
     <td>21</td>
   </tr>
 </table>
 
 <h1>Jon Wilhite</h1><svg width='400' height='110'><rect width='300' height='100' style='fill:blue;stroke-width:3;stroke:rgb(0,0,0)' /></svg>
+
 <h1>Josh Leong</h1><svg width='400' height='110'><rect width='300' height='100' style='fill:red;stroke-width:3;stroke:rgb(0,0,0)' /></svg>
